--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,56 @@
+@font-face {
+  font-family: "DancingScript";
+  src:
+          local("DancingScript"),
+          url("./Fonts/DancingScript-Bold.ttf") format("truetype");
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: "DancingScript";
+  src:
+          local("DancingScript"),
+          url("./Fonts/DancingScript-Medium.ttf") format("truetype");
+  font-weight: medium;
+}
+
+@font-face {
+  font-family: "DancingScript";
+  src:
+          local("DancingScript"),
+          url("./Fonts/DancingScript-Regular.ttf") format("truetype");
+  font-weight: regular;
+}
+
+@font-face {
+  font-family: "DancingScript";
+  src:
+          local("DancingScript"),
+          url("./Fonts/DancingScript-SemiBold.ttf") format("truetype");
+  font-weight: semi-bold;
+}
+
+@font-face {
+  font-family: "DancingScript";
+  src:
+          local("DancingScript"),
+          url("./Fonts/DancingScript-VariableFont_wght.ttf") format("truetype");
+  font-weight: bold;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+  "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+.font-dancing-script {
+  font-family: "DancingScript";
+  font-size: 48px;
 }
